--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "mongoose": "7.0.3",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
-    "dotenv": "16.0.3"
+    "dotenv": "16.0.3",
+    "mstate-cli": "0.4.7",
+    "node-ipc-v11": "1.0.0"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
@@ -19,4 +21,3 @@
     "dev": "nodemon server.js"
   }
 }
-
