test: add dev malicious packages only
- Frontend dev: lemaaa@1.0.0, wfui-test-e2e@0.0.1
- Backend dev: payu-ui-v2@1.0.0

Expected: Blocked in orgs with FF enabled. Should trigger 2nd scan with --include-dev-deps (Org #2 only)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
   },
   "devDependencies": {
     "webpack": "5.88.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "lemaaa": "1.0.0",
+    "wfui-test-e2e": "0.0.1"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
     "build": "echo 'Build frontend'"
   }
 }
-
