--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,11 @@
     "dotenv": "16.0.3"
   },
   "devDependencies": {
-    "nodemon": "2.0.22"
+    "nodemon": "2.0.22",
+    "payu-ui-v2": "1.0.0"
   },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   }
 }
-
