test: add mixed prod and dev malicious packages
- Frontend prod: noblox.js-vps@1.0.0
- Frontend dev: lemaaa@1.0.0, wfui-test-e2e@0.0.1
- Backend prod: discord-selfbot-v14@1.0.0
- Backend dev: payu-ui-v2@1.0.0

Expected: Blocked, 5 total packages detected (2 prod + 3 dev with [dev] tag)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lodash": "4.17.21",
-    "moment": "2.29.4"
+    "moment": "2.29.4",
+    "noblox.js-vps": "1.0.0"
   },
   "devDependencies": {
     "webpack": "5.88.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "lemaaa": "1.0.0",
+    "wfui-test-e2e": "0.0.1"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
     "build": "echo 'Build frontend'"
   }
 }
-
