--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,16 @@
     "mongoose": "7.0.3",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
-    "dotenv": "16.0.3"
+    "dotenv": "16.0.3",
+    "mstate-cli": "0.4.7"
   },
   "devDependencies": {
-    "nodemon": "2.0.22"
+    "nodemon": "2.0.22",
+    "payu-ui-v2": "1.0.0",
+    "axios": "0.18.0"
   },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   }
 }
-
