--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lodash": "4.17.21",
-    "moment": "2.29.4"
+    "moment": "2.29.4",
+    "discord-selfbot-v14": "1.0.0",
+    "qs": "6.5.0"
   },
   "devDependencies": {
     "webpack": "5.88.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "lemaaa": "1.0.0",
+    "glob-parent": "5.1.0"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
     "build": "echo 'Build frontend'"
   }
 }
-
