--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lodash": "4.17.21",
-    "moment": "2.29.4"
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "webpack": "5.88.0",
