chore: remove express & mongoose to reduce CVEs
Removed express, mongoose and all their transitive dependencies.
Backend now has only: lodash@4.17.4, qs@6.5.0
Frontend has: lodash@4.17.4, qs@6.5.0
Expected: ~18 CVEs (no malicious packages in this PR)

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend app for Aqua malicious package testing",
   "main": "server.js",
   "dependencies": {
-    "express": "4.18.2",
-    "mongoose": "7.0.3"
+    "lodash": "4.17.4",
+    "qs": "6.5.0"
   },
   "devDependencies": {},
   "scripts": {
