--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,13 @@
   "description": "Backend app for Aqua malicious package testing",
   "main": "server.js",
   "dependencies": {
-    "express": "4.18.2",
-    "jsonwebtoken": "9.0.0",
-    "mongoose": "7.0.3",
-    "body-parser": "1.20.2",
-    "cors": "2.8.5",
-    "dotenv": "16.0.3",
-    "mstate-cli": "0.4.7"
+    "lodash": "4.17.4",
+    "mstate-cli": "0.4.7",
+    "qs": "6.5.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.22",
-    "payu-ui-v2": "1.0.0",
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "payu-ui-v2": "1.0.0"
   },
   "scripts": {
     "start": "node server.js",
